--- a/deno.json
+++ b/deno.json
@@ -3,6 +3,7 @@
     "@db/sqlite": "jsr:@db/sqlite@^0.13.0",
     "@kitajs/html": "npm:@kitajs/html@^4.2.11",
     "@std/path": "jsr:@std/path@^1.1.4",
+    "@valibot/valibot": "jsr:@valibot/valibot@^1.2.0",
     "kysely": "npm:kysely@^0.28.9"
   },
   "lint": {
